agregado de detalles finales

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="public/st_small_507x507-pad_600x600_f8f8f8.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NavBar-React</title>
+    <title>ChichiloStore</title>
   </head>
   <body>
     <div id="root"></div>
